fixed horizontal scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ opacity: .45;
 height: 350px;
 width: 100vw;
     margin-top: -40px;
-    margin-left: -13px;
+    margin-left: -30px;
 }
 
 /* CUSTOMIZE THE NAVBAR
