--- a/midtown/style.css
+++ b/midtown/style.css
@@ -191,7 +191,7 @@ section.parallax {
     height: 350px;
     width: 100vw;
     margin-top: -40px;
-    margin-left: -13px;
+    margin-left: -30px;
 }
 
 /* MAP */
